# silver-goggles

./: .clang-format  .gitignore  CMakeLists.txt  README.md
libraries/: CMakeLists.txt
libraries/matrix-tools/: CMakeLists.txt
libraries/matrix-tools-lib/: CMakeLists.txt
libraries/matrix-tools-lib/include/matrix-tools/: MatrixFileParser.h
libraries/matrix-tools-lib/src/: MatrixFileParser.cpp
libraries/matrix-tools/include/matrix-tools/: Matrix.h  MatrixExceptions.h  MatrixFileParser.h
libraries/matrix-tools/src/: Matrix.cpp  MatrixExceptions.cpp  MatrixFileParser.cpp
libraries/matrix-tools/test/: CMakeLists.txt  DeterminantZeroSquareMatrixTests.cpp  NoZeroElementsMatrix2x2Tests.cpp  NoZeroElementsMatrix3x3Tests.cpp  NonSquareMatrixTests.cpp  someTests.cpp
tools/: CMakeLists.txt
tools/matrix-cli/: CMakeLists.txt  main.cpp
